Fix text ellipses rendering on small devices

--- a/src/components/Journal/JournalComponents.css
+++ b/src/components/Journal/JournalComponents.css
@@ -213,3 +213,7 @@ input[type=file]#files {
         transform: scale(1);
     }
 }
+
+ion-segment-button > ion-label {
+    text-overflow: unset !important;
+}
